4.39.1: fix overflow in docs

--- a/docs/src/components/pages/Tokens/TokensContent/TokensContent.css
+++ b/docs/src/components/pages/Tokens/TokensContent/TokensContent.css
@@ -12,7 +12,7 @@
 }
 
 .tokens-content-item > div {
-	overflow: auto;
+	overflow: visible;
 }
 
 .tokens-content-header > div:nth-child(1),
